--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body class="works_on_smartphone">
-    <header><ul><li><a href="index.html">Home</a></li><li><a href="tweets.html">Tweets</a></li></ul></header>
+    <header><ul><li><a href="index.html">Home♔</a></li><li><a href="tweets.html">Tweets♔</a></li></ul></header>
     <main>
         <article>
             <h1>Welcome to My Portfolio</h1>
