--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -22,16 +22,18 @@
     </header>
     <main>
         <section>
-            <div>
+            <div class ="intro">
                 <h1>Get schooled</h1>
+            <div class ="keywords">
                 <span>SMILES</span>
                 <span>GRIN</span>
                 <span>LAUGH</span>
                 <button>REGISTER FOR FREE</button>
+                </div>
             </div>
             <div>
-                <h2>Learn from the pros</h2>
-                <div>
+                <h2><span class ="purple">Learn</span> from the pros</h2>
+                <div class = "images">
                     <div>
                         <img src="./images/1.png" alt="">
                         <h3>Phillip Massey</h3>
