Styled the footer and testimonials section{

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -21,7 +21,7 @@
         
     </header>
     <main>
-        <section>
+        <section class = "main-content">
             <div class ="intro">
                 <h1>Get schooled</h1>
             <div class ="keywords">
@@ -57,114 +57,122 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="testimonials">
             <div>
                 <img src="./images/5.png" alt="image">
             </div>
-            <div>
+            <div class ="additional-info">
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
                 <h3>NAME</h3>
                 <P>weather presenter</P>
             </div>
         </section>
-        <section>
+        <section class="tutorials">
             <h2>Most popular tutorials</h2>
-            <div>
-                <img src="./images/9.png" alt="">
-                <h3>Diagonal Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+            <div class="grid">
+            <div class="container">
+                <img src="./images/9.png" alt="" class="main-image">
+                <img src ="./images/play.png " alt="" class="play">
+                <h3 >Diagonal Smile</h3>
+                <p >Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1.png" alt="">
+                    <img src="./images/1.png" alt="" class="profile-pic">
                     <h4>Phillip Massey</h4>
                 </div>
-                <div>
+                <div class="rating">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><span><i class="fa-solid fa-star"></i></span></div>
                 </div>
                 <p>8 min</p>
             </div>
-            <div>
-                <img src="./images/6.png" alt="">
+            <div class="container">
+                <img src="./images/6.png" alt="" class="main-image">
+                <img src ="./images/play.png " alt="" class="play">
                 <h3>Happy Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1.png" alt="">
+                    <img src="./images/1.png" alt="" class="profile-pic">
                     <h4>Phillip Massey</h4>
                 </div>
-                <div>
+                <div class="rating">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><span><i class="fa-solid fa-star"></i></span></div>
                 </div>
                 <p>8 min</p>
             </div>
-            <div>
-                <img src="./images/8.png" alt="">
+            <div class="container">
+                <img src="./images/8.png" alt="" class="main-image">
+                <img src ="./images/play.png " alt="" class="play">
                 <h3>Natural Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1.png" alt="">
+                    <img src="./images/1.png" alt="" class="profile-pic">
                     <h4>Phillip Massey</h4>
                 </div>
-                <div>
+                <div class="rating">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><span><i class="fa-solid fa-star"></i></span></div>
                 </div>
                 <p>8 min</p>
             </div>
-            <div>
-                <img src="./images/7.png" alt="">
+            <div class="container">
+                <img src="./images/7.png" alt="" class="main-image">
+                <img src ="./images/play.png " alt="" class="play">
                 <h3>Sad Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1.png" alt="">
+                    <img src="./images/1.png" alt="" class="profile-pic">
                     <h4>Phillip Massey</h4>
                 </div>
-                <div>
+                <div class="rating">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><span><i class="fa-solid fa-star"></i></span></div>
                 </div>
                 <p>8 min</p>
             </div>
+        </div>
         </section>
-        <section>
-            <h2>Free membership</h2>
-            <div>
-                <img src="./images/smile.svg" alt="">
+        <section class="membership">
+            <h2><span>Free </span>membership</h2>
+            <div class="items">         
+             <div>
+                <img src="./images/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="./images/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="./images/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="./images/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
+        </div>  
             <button>REGISTER FOR FREE</button>
         </section>
-        <section>
+        <section class="faq">
             <h2>F.A.Q</h2>
-            <div>
+            <div class="faq-content">
                 <div>
                     <div>
                         <h3>How does this work?</h3>
@@ -201,7 +209,7 @@
         <section>
             <div>
                 <img src="images/logo.png" alt="logo">
-                <div>
+                <div class="icons">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
