Added html files from file 1-8

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -10,8 +10,15 @@
     <header>
         <div class="logo">
           <img src="images/logo_headphones.png" alt="Logo" />
-
         </div>
+        
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+
+        <label for="menu-toggle" class="hamburger-icon" aria-label="Toggle navigation">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </label>
         <nav>
           <a href="#">what we do</a>
           <a href="#">our results</a>
@@ -34,7 +41,7 @@
         </div>
       </section>
         <section class="what-we-do">
-            <div>
+            <div class="description">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
                     do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,\
                      quis nostrud exercitation ullamco laboris nisi ut 
@@ -44,22 +51,22 @@
             </div>
             <div class="icons">
                 <div>
-                    <img src="images/icon1.png" alt="icon">
+                    <img src="images/sound-frequency.png" alt="icon">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div>
-                    <img src="images/icon1.png" alt="icon">
+                    <img src="images/video.png" alt="icon">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div>
-                    <img src="images/icon1.png" alt="icon">
+                    <img src="images/music.png" alt="icon">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div>
-                    <img src="images/icon1.png" alt="icon">
+                    <img src="images/hearing.png" alt="icon">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
